--- a/exercise-01/assets/styles/index.css
+++ b/exercise-01/assets/styles/index.css
@@ -15,9 +15,45 @@ h1, h2 {
     font-size: 3.5vw;
 }
 
+.row {
+    display: flex;
+}
+
+.column-1 {
+    flex: 50%;
+
+    /* Top Right Bottom Left */
+    padding: 100px 250px 100px 250px;
+}
+
+.column-2 {
+    flex: 25%;
+    padding-top: 250px;
+    padding-right: 250px;
+}
+
+.column-3 {
+    flex: 20%;
+    text-align: center;
+    margin: 25px;
+    padding: 20px;
+    padding-top: 30px;
+    font-size: 1.25vw;
+    background-color: rgb(211, 235, 245);
+}
+
+.column-4 {
+    flex: 1%;
+}
+
 /* ------------------------------------------------ */
 /* Navigator Styles */
 /* ------------------------------------------------ */
+nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
 
 nav ul {
     list-style-type: none;
@@ -35,15 +71,16 @@ nav li a {
     display: block;
     text-decoration: none;
     color: gray;
-    padding: 25px;
+    padding: 15px 20px;
 }
 
 nav li select { 
     width: 100%;
     display: block;
-    font-size: 1vw;
-    margin-top: 15px;
+    font-size: 0.75vw;
+    margin-top: 10px;
     padding: 5px;
+    border: 1px solid rgba(128, 128, 128, .5);
 }
 
 #nav-icon {
@@ -52,14 +89,14 @@ nav li select {
 }
 
 #nav-title {
-    padding: 20px;
+    padding: 12px 20px;
     color: black;
     font-size: 20px;
 }
 
 nav a:hover, nav a:visited, nav a:active {
     border-bottom: 3px solid gray;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 
 .nav-right {
@@ -71,7 +108,12 @@ nav a:hover, nav a:visited, nav a:active {
 }
 
 .nav-selector {
-    width: 100px;
+    width: 85px;
+    margin-right: 10px;
+}
+
+.nav-selector option {
+    font-size: 20px;
 }
 
 .nav-right-links a:hover,
@@ -93,23 +135,9 @@ nav a:hover, nav a:visited, nav a:active {
     width: 300px;
 }
 
-.row {
-    display: flex;
+#title-background {
     background-color: #073042;
     color: white;
-}
-
-.column-1 {
-    flex: 50%;
-
-    /* Top Right Bottom Left */
-    padding: 100px 250px 100px 250px;
-}
-
-.column-2 {
-    flex: 25%;
-    padding-top: 250px;
-    padding-right: 250px;
 }
 
 input {
@@ -121,4 +149,29 @@ input {
     margin-top: 50px;
     padding: 10px;
     padding-left: 40px;
+}
+
+/* ------------------------------------------------ */
+/* Content Styles */
+/* ------------------------------------------------ */
+
+.column-3 b {
+    vertical-align: top;
+}
+
+.shadow-anim:hover,
+.shadow-anim:focus {
+    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+    transform: translateY(-0.25em);
+    transition: transform ease 0.5s, box-shadow ease 0.5s;
+}
+
+.icon {
+    width: 10%;
+    margin-right: 25px;
+}
+
+.icon-2 {
+    width: 5%;
+    margin-left: 25px;
 }
