--- a/exercise-01/assets/styles/index.css
+++ b/exercise-01/assets/styles/index.css
@@ -164,6 +164,7 @@ input {
     box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
     transform: translateY(-0.25em);
     transition: transform ease 0.5s, box-shadow ease 0.5s;
+    cursor: pointer;
 }
 
 .icon {
