--- a/exercise-01/assets/styles/index.css
+++ b/exercise-01/assets/styles/index.css
@@ -34,16 +34,14 @@ h1, h2 {
 
 .column-3 {
     flex: 20%;
-    text-align: center;
-    margin: 25px;
-    padding: 20px;
-    padding-top: 30px;
-    font-size: 1.25vw;
-    background-color: rgb(211, 235, 245);
 }
 
 .column-4 {
     flex: 1%;
+}
+
+.column-5 {
+    flex: 35%;
 }
 
 /* ------------------------------------------------ */
@@ -175,4 +173,69 @@ input {
 .icon-2 {
     width: 5%;
     margin-left: 25px;
+}
+
+.card-center {
+    text-align: center;
+}
+
+.card-left {
+    text-align: left;
+}
+
+.card-blue {
+    margin: 25px;
+    padding: 20px;
+    padding-top: 30px;
+    font-size: 1.25vw;
+    background-color: rgb(211, 235, 245);
+}
+
+.card-black {
+    margin: 25px;
+    padding: 20px;
+    padding-top: 30px;
+    font-size: 1.25vw;
+    background-color: #073042;
+    color: white;
+}
+
+.button-black {
+    background-color: transparent;
+    border: 1px solid black;
+    font-size: 1.25vw;
+    border-radius: 10%;
+    padding: 10px;
+}
+
+.button-black:hover {
+    background-color: white;
+    border: none;
+}
+
+.button-white {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    font-size: 1.25vw;
+    border-radius: 10%;
+    padding: 10px;
+}
+
+.button-white:hover {
+    background-color: white;
+    border: none;
+    color: #073042;
+}
+
+.card-img {
+    width: 300px;
+}
+
+.card-big {
+    padding: 50px;
+}
+
+.card-big section div p {
+    font-size: 1vw;
 }
